--- a/Collectors/Views/Admin/Index.cshtml
+++ b/Collectors/Views/Admin/Index.cshtml
@@ -1,12 +1,45 @@
-﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
+﻿@using Collectors.Models;
 @{
     ViewData["Title"] = "Index";
+    int i = 0;
 }
+@model CheckboxListModel;
 
-<h1>Index</h1>
-<ul>
-    @foreach (var user in Model)
-    {
-        <li>@user.Email</li>
-    }
-</ul>
+<h2> All registred users</h2>
+<form asp-controller="Home" asp-anti-forgery="true">
+    <div class="toolbar mb-3" role="toolbar">
+        <div class="btn-group mr-2" role="group">
+            <button type="submit" class="btn btn-secondary" asp-action="Lock">Block</button>
+            <button type="submit" class="btn btn-secondary" asp-action="Unlock">Unblock</button>
+            <button type="submit" class="btn btn-secondary" asp-action="Delete">Delete</button>
+            <button type="submit" class="btn btn-secondary" asp-action="MakeAdmin">Make administrator</button>
+        </div>
+    </div>
+
+
+    <table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
+        <thead>
+            <tr>
+                <th><input name="select_all" value="1" type="checkbox"> Select/Diselect all</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Blocked</th>
+                <th>Role</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in ViewBag.UsersInfo)
+            {
+                <tr>
+                    <td><input type="checkbox" asp-for="Selected[i]" /></td>
+                    <td>@item.User.UserName</td>
+                    <td>@item.User.Email</td>
+                    <td>@item.IsBlocked</td>
+                    <td>@item.Role</td>
+                </tr>
+                i++;
+            }
+        </tbody>
+    </table>
+</form>
+<script src="~/js/selectAll.js" asp-append-version="true"></script>
