--- a/Collectors/Views/Home/Index.cshtml
+++ b/Collectors/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @{
+        if (ViewBag.Role != null && ViewBag.Role[0] == "admin")
+        {
+            <h2>You have admin account</h2>
+            <form asp-action="Index" asp-controller="Admin">
+                <button class="btn-primary">Manage Users</button>
+            </form>
+        }
+    }
+
 </div>
