Added basic localization

--- a/Collectors/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Collectors/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,5 +1,9 @@
 ﻿@page
 @model PersonalDataModel
+@using Collectors;
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer;
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer;
 @{
     ViewData["Title"] = "Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
@@ -14,10 +18,10 @@
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="btn btn-primary" type="submit">@SharedLocalizer["Download"]</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">@SharedLocalizer["Delete"]</a>
         </p>
     </div>
 </div>
