--- a/Collectors/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/Collectors/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -4,12 +4,14 @@
     ViewData["Title"] = "Manage your external logins";
     ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
 }
-
+@using Collectors;
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer;
 <partial name="_StatusMessage" for="StatusMessage" />
 @if (Model.CurrentLogins?.Count > 0)
 {
-    <h4>Registered Logins</h4>
-    <table class="table">
+    <h4>@SharedLocalizer["External logins"]</h4>
+    <table class="table white">
         <tbody>
             @foreach (var login in Model.CurrentLogins)
             {
@@ -22,7 +24,10 @@
                                 <div>
                                     <input asp-for="@login.LoginProvider" name="LoginProvider" type="hidden" />
                                     <input asp-for="@login.ProviderKey" name="ProviderKey" type="hidden" />
-                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
+                                    <button type="submit" class="btn btn-primary"
+                                            title="Remove this @login.ProviderDisplayName login from your account">
+                                        Remove
+                                    </button>
                                 </div>
                             </form>
                         }
@@ -38,7 +43,7 @@
 }
 @if (Model.OtherLogins?.Count > 0)
 {
-    <h4>Add another service to log in.</h4>
+    <h4>@SharedLocalizer["Add external login"]</h4>
     <hr />
     <form id="link-login-form" asp-page-handler="LinkLogin" method="post" class="form-horizontal">
         <div id="socialLoginList">
