--- a/Collectors/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Collectors/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
 @model IndexModel
+@using Collectors;
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer;
 @{
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
@@ -20,7 +23,7 @@
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <button id="update-profile-button" type="submit" class="btn btn-primary">@SharedLocalizer["Save"]</button>
         </form>
     </div>
 </div>
