--- a/Collectors/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/Collectors/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -1,4 +1,8 @@
 ﻿@page
+@using Collectors;
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer;
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer;
 @model SetPasswordModel
 @{
     ViewData["Title"] = "Set password";
