--- a/Collectors/Views/Admin/Index.cshtml
+++ b/Collectors/Views/Admin/Index.cshtml
@@ -1,18 +1,20 @@
 ﻿@using Collectors.Models;
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer;
 @{
     ViewData["Title"] = "Index";
     int i = 0;
 }
 @model CheckboxListModel;
 
-<h2> All registred users</h2>
+<h2> @Localizer["All users"]</h2>
 <form asp-controller="Home" asp-anti-forgery="true">
     <div class="toolbar mb-3" role="toolbar">
         <div class="btn-group mr-2" role="group">
-            <button type="submit" class="btn btn-secondary" asp-action="Lock">Block</button>
-            <button type="submit" class="btn btn-secondary" asp-action="Unlock">Unblock</button>
-            <button type="submit" class="btn btn-secondary" asp-action="Delete">Delete</button>
-            <button type="submit" class="btn btn-secondary" asp-action="MakeAdmin">Make administrator</button>
+            <button type="submit" class="btn btn-secondary" asp-action="Lock">@Localizer["Lock"]</button>
+            <button type="submit" class="btn btn-secondary" asp-action="Unlock">@Localizer["Unlock"]</button>
+            <button type="submit" class="btn btn-secondary" asp-action="Delete">@Localizer["Delete"]</button>
+            <button type="submit" class="btn btn-secondary" asp-action="MakeAdmin">@Localizer["Make administrator"]</button>
         </div>
     </div>
 
@@ -20,11 +22,11 @@
     <table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
         <thead>
             <tr>
-                <th><input name="select_all" value="1" type="checkbox"> Select/Diselect all</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Blocked</th>
-                <th>Role</th>
+                <th><input name="select_all" value="1" type="checkbox"> @Localizer["Select all"]</th>
+                <th>@Localizer["Name"]</th>
+                <th>@Localizer["Email"]</th>
+                <th>@Localizer["Blocked"]</th>
+                <th>@Localizer["Role"]</th>
             </tr>
         </thead>
         <tbody>
