--- a/Collectors/Views/Collections/Create.cshtml
+++ b/Collectors/Views/Collections/Create.cshtml
@@ -1,9 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer;
 @{
 }
-<h2>Create new collection</h2>
+<h2>@Localizer["Create new collection"]</h2>
 <form>
-
 </form>
