--- a/Collectors/Views/Home/Index.cshtml
+++ b/Collectors/Views/Home/Index.cshtml
@@ -1,16 +1,17 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer;
 @{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">@Localizer["Message"]</h1>
     @{
         if (ViewBag.Role != null && ViewBag.Role[0] == "admin")
         {
-            <h2>You have admin account</h2>
+            <h2>@Localizer["AdminMessage"]</h2>
             <form asp-action="Index" asp-controller="Admin">
-                <button class="btn-primary">Manage Users</button>
+                <button class="btn-primary">@Localizer["ManageUsers"]</button>
             </form>
         }
     }
