--- a/Collectors/wwwroot/css/site.css
+++ b/Collectors/wwwroot/css/site.css
@@ -9,16 +9,12 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
+
+   
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
@@ -70,8 +66,9 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.collection-item {
+.menu-link {
 
-    color: red;
-    font-weight:900;
+    text-decoration: none;
+    color: mediumvioletred;
+
 }
