--- a/Collectors/Views/Collections/Index.cshtml
+++ b/Collectors/Views/Collections/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
 }
 @using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer Localizer;
+@using Collectors.Data.Classes; 
+@model List<Collection>;
+
 <h2>@Localizer["Manage collections"]</h2>
 <div class="toolbar mb-5 p-2 darkmode-ignore" style="background-color:cornflowerblue">
     <a asp-action="Create"><img src="~/bootstrap-icons/icons/plus-circle.svg" />
@@ -14,17 +15,17 @@
     @*@*@
 
     @{
-        for (int i = 0; i < 10; i++)
+        for(int i = 0; i < Model.Count; i++)
         {
-            <div class="card w-25 m-3 d-inline-block p-1 darkmode-ignore" style="background-color:cornflowerblue">
-                <a href="#"><img src="~/bootstrap-icons/icons/pencil.svg" /></a>
-                <a href="#"><img src="~/bootstrap-icons/icons/trash.svg" /></a>
-                <a href="pornhub.com">
-                    <img class="card-img-top" src="~/img/coin-collection.jpg" alt="Card image cap">
+            <div class="card m-3 d-inline-block p-1 w-50 darkmode-ignore" style="background-color:cornflowerblue;">
+                <a><img src="~/bootstrap-icons/icons/pencil.svg" /></a>
+                <a><img src="~/bootstrap-icons/icons/trash.svg" /></a>
+                <a>
+                    <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model[i].Image))" alt="Card image cap">
                 </a>
                 <div class="card-body">
-                    <h5 class="card-title">Name of the collection</h5>
-                    <p class="card-text">Short description</p>
+                    <h5 class="card-title">Theme : @Enum.GetValues(typeof(CollectionTheme)).GetValue(Model[i].ThemeId);</h5>
+                    <p class="card-text"> @Model[i].ShortDescription</p>
                 </div>
             </div>
         }
