--- a/Collectors/Views/Collections/Index.cshtml
+++ b/Collectors/Views/Collections/Index.cshtml
@@ -2,30 +2,31 @@
 @{
 }
 @using Microsoft.AspNetCore.Mvc.Localization;
+@using Collectors.Data.Classes;
+@using Markdig;
 @inject IViewLocalizer Localizer;
-@using Collectors.Data.Classes; 
 @model List<Collection>;
 
 <h2>@Localizer["Manage collections"]</h2>
 <div class="toolbar mb-5 p-2 darkmode-ignore" style="background-color:cornflowerblue">
-    <a asp-action="Create"><img src="~/bootstrap-icons/icons/plus-circle.svg" />
-        </a>@Localizer["add new collection"] 
+    <a asp-action="Create">
+        <img src="~/bootstrap-icons/icons/plus-circle.svg" />
+    </a>@Localizer["add new collection"]
 </div>
 <div class="align-content-center">
-    @*@*@
 
     @{
-        for(int i = 0; i < Model.Count; i++)
+        for (int i = 0; i < Model.Count; i++)
         {
             <div class="card m-3 d-inline-block p-1 w-50 darkmode-ignore" style="background-color:cornflowerblue;">
-                <a><img src="~/bootstrap-icons/icons/pencil.svg" /></a>
-                <a><img src="~/bootstrap-icons/icons/trash.svg" /></a>
-                <a>
-                    <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model[i].Image))" alt="Card image cap">
+                <a asp-action="Edit" asp-><img src="~/bootstrap-icons/icons/pencil.svg" /></a>
+                <a asp-action="Delete"><img src="~/bootstrap-icons/icons/trash.svg" /></a>
+                <a asp-action="View">
+                    <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model[i].Image))" alt="@Localizer["View items"]" />
                 </a>
                 <div class="card-body">
                     <h5 class="card-title">Theme : @Enum.GetValues(typeof(CollectionTheme)).GetValue(Model[i].ThemeId);</h5>
-                    <p class="card-text"> @Model[i].ShortDescription</p>
+                    @Html.Raw(Markdown.ToHtml(Model[i].ShortDescription))
                 </div>
             </div>
         }
