--- a/Collectors/Views/Collections/Index.cshtml
+++ b/Collectors/Views/Collections/Index.cshtml
@@ -20,19 +20,27 @@
         {
 
             <div class="card m-3 d-inline-block p-1 w-50 darkmode-ignore" style="background-color:cornflowerblue;">
-                    <form>
-                        <input asp-for="Id" value="@element.Id" type="hidden" />
-                        <button type="submit" asp-action="Edit">
-                            <img src="~/bootstrap-icons/icons/pencil.svg" />
-                        </button>
+                <form>
+                    <input asp-for="Id" value="@element.Id" type="hidden" />
+                    <button type="submit" asp-action="Edit">
+                        <img src="~/bootstrap-icons/icons/pencil.svg" />
+                    </button>
 
-                        <button type="submit" asp-action="Delete">
-                            <img src="~/bootstrap-icons/icons/trash.svg" />
-                        </button>
-                    </form>
+                    <button type="submit" asp-action="Delete">
+                        <img src="~/bootstrap-icons/icons/trash.svg" />
+                    </button>
+                </form>
                 <a asp-action="View">
-                    <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(element.Image))" alt="@Localizer["View items"]" />
+                    @if (element.Image != null)
+                    {
+                        <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(element.Image))" alt="@Localizer["View items"]" />
+                    }
+                    else
+                    {
+                        <img class="card-img-top" src="~/img/ImageNotSet.png" alt="@Localizer["View items"]" />
+                    }
                 </a>
+                
                 <div class="card-body">
                     <h5 class="card-title">Theme : @Enum.GetValues(typeof(CollectionTheme)).GetValue(element.ThemeId);</h5>
                     @Html.Raw(Markdown.ToHtml(element.ShortDescription))
