--- a/Collectors/Views/Admin/Index.cshtml
+++ b/Collectors/Views/Admin/Index.cshtml
@@ -6,7 +6,9 @@
     int i = 0;
 }
 @model CheckboxListModel;
-
+<div>
+    @await Html.PartialAsync("_SelectLanguagePartial")
+</div>
 <h2> @Localizer["All users"]</h2>
 <form asp-controller="Home" asp-anti-forgery="true">
     <div class="toolbar mb-3" role="toolbar">
@@ -19,7 +21,7 @@
     </div>
 
 
-    <table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
+    <table id="data-table" class="table table-striped table-bordered" width="80%">
         <thead>
             <tr>
                 <th><input name="select_all" value="1" type="checkbox"> @Localizer["Select all"]</th>
