--- a/Collectors/Views/Collections/Create.cshtml
+++ b/Collectors/Views/Collections/Create.cshtml
@@ -6,7 +6,9 @@
     var themes = Enum.GetValues(typeof(CollectionTheme));
     string[] fieldsTypes = { "Integer fields", "Oneline string fields", "Text fields", "Boolean fields", "Date fields" };
 }
-<link rel="stylesheet" src="~/css/createCollection.css" />
+<div>
+    @await Html.PartialAsync("_SelectLanguagePartial")
+</div>
 <h2 class="text-center m-4">@Localizer["Create new collection"]</h2>
 <form method="post" enctype="multipart/form-data">
     <textarea rows="5" cols="60" asp-for="@Model.ShortDescription" placeholder="@Localizer["Short description"]"></textarea>
