--- a/Collectors/Views/Items/Index.cshtml
+++ b/Collectors/Views/Items/Index.cshtml
@@ -3,16 +3,16 @@
 @inject IViewLocalizer Localizer;
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @model ItemsListViewModel
+<form method="post">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">@Localizer["Manage items"]</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">@Localizer["Manage items"]</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <form method="post">
             @{
                 <input asp-for="CollectionId" value="@Model.CollectionId" type="hidden" />
                 for (int i = 0; i < Model.AdditionalFieldsIndexes.Count; i++)
@@ -53,38 +53,44 @@
                     </div>
                 </li>
             </ul>
-        </form>
-        <form class="form-inline my-2 my-lg-0">
+
             <input class="form-control mr-sm-2" type="search" placeholder="@Localizer["Search by name"]" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
+        </div>
+    </nav>
 
-<table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
-    <thead>
-        <tr>
-            <th><input name="select_all" value="1" type="checkbox"> @Localizer["Select all"]</th>
-            <th>@SharedLocalizer["Id"]</th>
-            <th>@SharedLocalizer["Name"]</th>
-            <th>@SharedLocalizer["Tags"]</th>
-            @{
-                foreach (var e in Model.AdditionalFieldsNames)
-                {
-                    <th>@e</th>
-                }
-            }
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var e in Model.Items)
-        {
+    <table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
+        <thead>
             <tr>
-                <td><input type="checkbox" /></td>
-                <td>@e.Id</td>
-                <td>@e.Name</td>
-                <td>@e.Tags</td>
+                <th><input name="select_all" value="1" type="checkbox"> @Localizer["Select all"]</th>
+                <th>@SharedLocalizer["Id"]</th>
+                <th>@SharedLocalizer["Name"]</th>
+                <th>@SharedLocalizer["Tags"]</th>
+                @{
+                    foreach (var e in Model.AdditionalFieldsNames)
+                    {
+                        <th>@e</th>
+                    }
+                }
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @for (int i = 0; i < Model.Items.Count; i++)
+            {
+                <tr>
+                    <td>
+                        <input type="checkbox" asp-for="@Model.Selected[i]" />
+                    </td>
+                    <td>@Model.Items[i].Id</td>
+                    <td>@Model.Items[i].Name</td>
+                    <td>@Model.Items[i].Tags</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</form>
+@section Scripts{
+    <script src="~/js/selectAll.js">
+
+    </script>
+}
