--- a/Collectors/Views/Items/Add.cshtml
+++ b/Collectors/Views/Items/Add.cshtml
@@ -5,7 +5,7 @@
 
 <h2 class="text-center m-4">@Localizer["Add items to your collection"]</h2>
 <form method="post">
-    <input asp-for="@Model.Tags" id="tags" value="@string.Join(',',ViewBag.Tags)" type="hidden"/>
+    <input asp-for="@Model.Tags" id="tags" value="@string.Join(',',ViewBag.Tags)" type="hidden" />
     <div class="mb-5">
         <label asp-for="@Model.Name" class="text-center">@Localizer["Item name"]:</label><br />
         <input asp-for="@Model.Name" type="text" />
@@ -20,19 +20,19 @@
             {
                 for (int i = 0; i < Model.AdditionalFieldsNames.Count; i++)
                 {
-                <input asp-for="@Model.AdditionalFieldsIndexes[i]" 
-                       value="@Model.AdditionalFieldsIndexes[i]" type="hidden" />
-                <label asp-for="@Model.AdditionalFieldsValues[i]"
-                       >@Model.AdditionalFieldsNames[i]
-        </label>
-                <input asp-for="@Model.AdditionalFieldsValues[i]" type="text" class="m-2" />
-                <br />
-                    }
-                }
+                    <input asp-for="@Model.AdditionalFieldsIndexes[i]"
+                           value="@Model.AdditionalFieldsIndexes[i]" type="hidden" />
+                    <label asp-for="@Model.AdditionalFieldsValues[i]">
+                        @Model.AdditionalFieldsNames[i]
+                    </label>
+                    <input asp-for="@Model.AdditionalFieldsValues[i]" type="text" class="m-2" />
+                    <br />
+                 }
             }
+        }
     </div>
     <button asp-action="Index" id="createButton" class="btn btn-primary" type="submit">
-    @Localizer["Create"]
+        @Localizer["Create"]
     </button>
 </form>
 
