Added editing items

--- a/Collectors/Views/Admin/Index.cshtml
+++ b/Collectors/Views/Admin/Index.cshtml
@@ -46,4 +46,4 @@
         </tbody>
     </table>
 </form>
-<script src="~/js/selectAll.js" asp-append-version="true"></script>
+<script src="~/js/checkboxes.js" asp-append-version="true"></script>
