--- a/Collectors/Views/Collections/Index.cshtml
+++ b/Collectors/Views/Collections/Index.cshtml
@@ -1,7 +1,4 @@
-﻿
-@{
-}
-@using Microsoft.AspNetCore.Mvc.Localization;
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
 @using Collectors.Data.Classes;
 @using Markdig;
 @inject IViewLocalizer Localizer;
