--- a/Collectors/Views/Items/Index.cshtml
+++ b/Collectors/Views/Items/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization;
 @using Collectors.Models;
 @using Collectors.Classes;
+@using Markdig;
 @inject IViewLocalizer Localizer;
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @model ItemsListViewModel
 @{
     IFieldManager manager;
 }
-
 <form method="post">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">@Localizer["Manage items"]</a>
@@ -28,7 +28,7 @@
             }
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <button asp-action="Edit" type="submit">
+                    <button id="editButton" asp-action="Edit" type="submit">
                         <img src="~/bootstrap-icons/icons/pencil-fill.svg" />
                         <span class="sr-only">(current)</span>
                     </button>
@@ -59,7 +59,6 @@
                     </div>
                 </li>
             </ul>
-
             <input class="form-control mr-sm-2" type="search"
                    placeholder="@Localizer["Search by name"]" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
@@ -67,12 +66,10 @@
             </button>
         </div>
     </nav>
-
     <table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
         <thead>
             <tr>
                 <th><input name="select_all" value="1" type="checkbox"> @Localizer["Select all"]</th>
-                <th>@SharedLocalizer["Id"]</th>
                 <th>@SharedLocalizer["Name"]</th>
                 <th>@SharedLocalizer["Tags"]</th>
                 @{
@@ -90,7 +87,6 @@
                     <td>
                         <input type="checkbox" asp-for="@Model.Selected[i]" />
                     </td>
-                    <td>@Model.Items[i].Id</td>
                     <td>@Model.Items[i].Name</td>
                     <td>@Model.Items[i].Tags</td>
                     @{
@@ -98,7 +94,7 @@
                     }
                     @foreach (var j in Model.AdditionalFieldsIndexes)
                     {
-                        <td>@manager.GetFieldByIndex(j)</td>
+                        <td>@Html.Raw(manager.GetFieldByIndex(j))</td>
                     }
                 </tr>
             }
@@ -106,7 +102,5 @@
     </table>
 </form>
 @section Scripts{
-    <script src="~/js/selectAll.js">
-
-    </script>
+    <script src="~/js/checkboxes.js"></script>
 }
